<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">录音机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="action_index">浏览录音文件</string>
    <string name="setting">设定</string>
    <string name="detail">详细</string>
    <string name="play">播放</string>
    <string name="last">上一曲</string>
    <string name="next">下一曲</string>
    <string name="delete">删除</string>
    <string name="back">Back</string>
    <string name="action_rename">重命名</string>
    <string name="action_delete">删除</string>
    <string name="aciion_share">分享</string>
    <string name="apply">确定</string>
    <string name="cancel">取消</string>

</resources>